# pyconfd

./: .envrc  .gitignore  README.md  pyconfd_netconf_host_key  pyproject.toml  requirements.txt
examples/dhcpd/: README.md  demo.py  dhcpd.yang  dhcpd_subscriber.py  mock-scenarios.yaml  pyconfd_host_key
examples/dhcpd/confd-cdb/: running.json
examples/hosts/: README.md  demo.py  hosts.yang  hosts_subscriber.py  pyconfd_host_key
examples/hosts/confd-cdb/: running.json
examples/recipe/: README.md  demo.py  pyconfd_host_key  recipe.yang  recipe_subscriber.py
examples/recipe/confd-cdb/: running.json
examples/yang-viz/: README.md  index.html  yang_viz_server.py
pyconfd/: README.md  __init__.py  cdb.py  cli_server.py  maapi.py  netconf_server.py  netconf_ssh_server.py  scenario.py  ssh_server.py  yang_parser.py
tests/: __init__.py  test_pyconfd.py
